apps/staging/gateway.yaml
# Gateway (assuming you have a CiliumLoadBalancerIPPool named single-node-pool)
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway-staging
  namespace: default
  annotations:
    lbipam.cilium.io/ip-pool: single-node-pool
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
---
# HTTPRoute for audiobookshelf
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http # Attach to the 'http' listener on port 80
  hostnames:
    - "audio-books-stage.burntbytes.com" # Match requests for app1.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: audiobookshelf
          port: 3005
---
# HTTPRoute for linkding
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http # Attach to the same 'http' listener
  hostnames:
    - "links-stage.burntbytes.com" # Match requests for app2.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkding
          port: 9090
---
# HTTPRoute for mealie
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http # Attach to the same 'http' listener
  hostnames:
    - "mealie-stage.burntbytes.com" # Match requests for app2.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 9000
